--- a/fullpage/assets/css/style.css
+++ b/fullpage/assets/css/style.css
@@ -348,8 +348,43 @@ h3 {
 	}
 }
 .home {
-	background: url("../images/bg_home.jpg") !important;
-	background-position: center center;
-	min-height: 600px;
+	background: url("../images/bg_home.png") !important;
+	background-position: center -260px !important;
+	/*min-height: 600px;*/
+	background-size: cover;
+}
+.second {
+	background: url("../images/bg_second.png") !important;
+	background-position: center -560px !important;
+	min-height: -650px;
+	background-size: 100%;	
+}
 
+.third {
+	background: url("../images/bg_second.png") !important;
+	background-position: center -560px !important;
+	background-size: 100%;	
+}
+.fourth {
+	background: url("../images/bg_event.png") !important;
+	background-position: center -560px !important;
+	background-size: 100%;	
+}
+.menu li {
+	display: inline-block;
+    padding: 18px 16px;
+    font-size: 12px;
+}
+.wrap-menu {
+	background: #ccc;
+    width: 682px;
+    float: right;
+}
+.wrap-mobile {
+	
+	width: 300px;
+	height: 400px;
+	left: 300px;
+	top: 90px;
+	position: absolute;
 }
