--- a/fullpage/assets/css/lib.css
+++ b/fullpage/assets/css/lib.css
@@ -15200,19 +15200,6 @@ body {
     font-size: 100%;
 }
 
-body {
-    background: #fff;
-    color: #222;
-    padding: 0;
-    margin: 0;
-    font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
-    font-weight: normal;
-    font-style: normal;
-    line-height: 1;
-    position: relative;
-    cursor: default;
-}
-
 a:hover {
     cursor: pointer;
 }
@@ -21130,7 +21117,7 @@ footer.unspaned {
 .home .iphone-containerf {
     position: fixed;
     left: 30%;
-    bottom: -10px;
+    bottom: 50px;
     margin-left: -10.4075em;
     z-index: 4;
     text-align: initial;
@@ -21154,7 +21141,6 @@ footer.unspaned {
 }
 
 .home .iphone-containerf .background-booking {
-    background-color: rgba(255, 255, 255, 0.8);
     position: absolute !important;
     z-index: 4;
     top: 3.88em;
@@ -22192,7 +22178,7 @@ footer.unspaned {
     height: 100%;
 }
 
-.bg_iphone_1,
+/*.bg_iphone_1,
 .bg_iphone_2,
 .bg_iphone_3,
 .bg_iphone_4,
@@ -22203,7 +22189,7 @@ footer.unspaned {
 .content-section-4,
 .content-section-5 {
     opacity: 0;
-}
+}*/
 
 .fp-viewing-0 .content-section-1 .slick-slider {
     margin-bottom: 0;
@@ -23245,24 +23231,27 @@ footer.unspaned {
     float: right;
 }
 
-#section-playstay .landscape .clouds {
+.clouds {
     position: absolute;
     bottom: 10.3rem;
-    left: 15%;
+    left: 0%;
     width: 100%;
     z-index: 1;
 }
 
-#section-playstay .landscape .clouds .ps-cloud-1 {
-    width: 100px;
-    bottom: 10rem;
+.clouds .ps-cloud-1 {
+    /*width: 100px;*/
+    bottom: 20rem;
     left: 3rem;
     -webkit-animation: cloudfly 25s linear infinite;
     animation: cloudfly 25s linear infinite;
 }
+.second .clouds .ps-cloud-1 {
+    bottom: 380px;
+}
 
-#section-playstay .landscape .clouds .ps-cloud-2 {
-    width: 120px;
+.clouds .ps-cloud-2 {
+    /*width: 120px;*/
     bottom: 10.5rem;
     left: 0rem;
     -webkit-animation: cloudfly 20s linear infinite;
@@ -23288,7 +23277,7 @@ footer.unspaned {
     z-index: 1;
 }
 
-#section-playstay .landscape .ps-mobile .ps-location-1 {
+.second .ps-location-1 {
     z-index: 3;
     height: 3.5rem;
     position: absolute;
@@ -24416,6 +24405,11 @@ footer.unspaned {
 
 #fp-nav.right {
     right: 17px;
+    /*left: 17px;*/
+}
+
+#fp-nav.left {
+    left: 17px;
 }
 
 .fp-slidesNav {
@@ -25026,16 +25020,16 @@ footer.unspaned {
 
 @media (max-height: 768px) {
     .home .iphone-containerf .background-booking {
-        top: 3.58em;
+        top: 2.58em;
         left: 0.28em;
-        height: 28.89em;
+        height: 29.89em;
         width: 16.25em;
     }
     .bg_iphone_1 {
         padding-top: 1.025em;
     }
     .home .iphone-containerf .iphone {
-        max-width: 20.915em !important;
+        max-width: 19.600em !important;
     }
     .display_screen {
         font-size: 15px;
@@ -25126,7 +25120,7 @@ footer.unspaned {
 @media (max-height: 440px) {
     .home .iphone-containerf {
         font-size: 9px;
-        bottom: -32px !important;
+        bottom: 10px !important;
     }
     .bg_iphone_1 {
         padding-top: 1em;
@@ -32697,12 +32691,6 @@ ul.pagination li a:hover {
 .wrap {
     width: 70%;
     margin: 0 auto 4% auto;
-}
-
-.logo {
-    padding: 1em;
-    text-align: center;
-    padding: 1% 1% 3% 1%;
 }
 
 .logo h1 {
